2009-11-24  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion.spec.in:
	Revert r8360, this change should wait until buildbot is upgraded.

2009-11-24  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/feedcomponent010.py:
	Revert r8319, dropping IN_CAPS buffers.
	It has been observed that after restarting an upstream component the
	log of the disker worker starts being filled with "buffer probe handler
	is None" messages, which suggests some kind of race where the buffer
	probe handler is set to None, but the probe itself is not removed.
	Reopens #1370.

2009-11-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/config.py:
	  Add to docstring.

2009-11-10  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/worker/checks/audio.py:
	Fix a pair of stupid copy-paste programming errors that make the
	soundcard worker check to fail from time to time.

2009-11-09  Andoni Morales Alastruey <amorales@flumotion.com>

	reviewed by: Julien Le Gof

	* flumotion/common/eventcalendar.py:
	Parse properly timezones in 'TZID' with a local path 
	prepended (e.g.:/mozilla.org/20070129_1/Europe/Madrid)
	* flumotion/test/test_icalbouncer.py:
	Added test for timezones with a local path in 'TZID'
	Closes #1377

2009-11-06 Andoni Morales Alastruey <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/test/test_common_managerspawner.py:
	Disable manager spawner test as they fail in 'fc5_64-quick-t2.0.1'

2009-11-06 Andoni Morales Alastruey <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/common/managerspawner.py:
	Stop properly managers started by the LocalManagerSpawner
	* flumotion/test/Makefile.am:
	* flumotion/test/test_common_managerspawner.py:
	* flumotion/test/test_common_managerspawner.py (added):
	Add a test suite for the LocalManagerSpawner
	Close #1380

2009-11-06  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Julien

	* flumotion/admin/assistant/models.py: